crates/cli/tests/snapshots/tui_config_form_test__config_form_none.snap
---
source: crates/cli/tests/tui_config_form_test.rs
expression: output
---
Settings                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌Settings──────────────────────────────────────────────────────────────────────┐
│LLM Configuration                                                             │
│                                                                              │
│Provider:  minimax                                                            │
│Base URL:  https://api.minimaxi.com/v1                                        │
│API Key:   sk-c****                                                           │
│Model:     MiniMax-M2.7                                                       │
│                                                                              │
│Sandbox Configuration                                                         │
│                                                                              │
│Steel Port:  3333                                                             │
│CDP Port:    9222                                                             │
│                                                                              │
│Exploration                                                                   │
│                                                                              │
│Max Depth:        3                                                           │
│Max Pages/Seed:   20                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[Esc] Back
